# pettycash2024

./: .gitignore  Pipfile  README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  database.py  main.py
app/api/routes/: ocr.py  thresholds.py  transactions.py
app/core/: config.py  database.py
app/models/: __init__.py  filters.py  threshold.py  thresholds.py  transaction.py  user.py
app/routes/: __init__.py  ocr_routes.py  transaction_routes.py  transactions.py
app/services/: __init__.py  ocr_service.py  threshold_service.py  transaction_filters.py  transaction_service.py  user_service.py
app/utils/: __init__.py  filters.py  pagination.py
src/: App.tsx
src/components/: Balance.tsx  CategoryAnalysis.tsx  CategoryManager.tsx  CategorySelect.tsx  DailyExpensesList.tsx  Dashboard.tsx  DateRangeFilter.tsx  EditTransactionModal.tsx  ListManagementModal.tsx  PersonBalanceTable.tsx  TransactionForm.tsx  TransactionForms.tsx  TransactionList.tsx
src/components/ui/: Button.tsx  Card.tsx
src/hooks/: useFormValidation.ts
src/types/: index.ts
src/utils/: calculations.ts  categories.ts  formatting.ts  people.ts  projects.ts  storage.ts  thresholds.ts  validation.ts
tests/: conftest.py  test_ocr_routes.py  test_transaction_routes.py
